@@ -1,6 +1,7 @@
 package com.zrlog.plugin.reminder;
 
 import com.zrlog.plugin.RunConstants;
+import com.zrlog.plugin.common.LoggerUtil;
 import com.zrlog.plugin.type.RunType;
 import com.zrlog.plugin.common.PluginNativeImageUtils;
 import com.zrlog.plugin.reminder.controller.ReminderController;
@@ -13,8 +14,12 @@ import java.io.File;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class GraalvmAgentApplication {
+
+    private static final Logger LOGGER = LoggerUtil.getLogger(GraalvmAgentApplication.class);
 
     public static void main(String[] args) throws IOException {
         RunConstants.runType = RunType.AGENT;
@@ -31,9 +36,9 @@ public class GraalvmAgentApplication {
 
     private static void warmupServiceReflection() {
         try {
-            ReminderCapabilityService.class.newInstance();
+            ReminderCapabilityService.class.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
-            e.printStackTrace();
+            LOGGER.log(Level.WARNING, "Warm up reminder service reflection failed", e);
         }
     }
 }
